--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Product Model</title>
 </head>
 <body>
-    <div class="flex items-center justify-center h-screen bg-[#F9F5F6]">
+    <div class="flex items-center justify-center min-h-screen bg-[#F9F5F6]">
         <!-- Card Container -->
         <div class="flex flex-col p-6 m-3 space-y-10 bg-white rounded-2xl shadow-2xl md:flex-row md:space-y-0 md:space-x-10 md:m-0 md:p-16">
             <!-- Image Div: Use Div container to control image sizing -->
